# glitxh

./: pyproject.toml  setup.py
.github/workflows/: publish.yml
src/glitxh/: __init__.py  __main__.py  glitxh.py
