[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "glitxh"
version = "0.2.0"
description = "Script glitxh"
license = {text = "MIT"}
authors = [{name = "Nataza", email = "nataza@ichigo.me"}]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
